force-app/main/default/objects/Policy_Claim__c/Policy_Claim__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <nameField>
        <label>System ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>