force-app/main/default/objects/Policy_Claim__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARDC</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Administrative Procedure</fullName>
            </value>
            <value>
                <fullName>Administrative Review</fullName>
            </value>
            <value>
                <fullName>Advice</fullName>
            </value>
            <value>
                <fullName>Bond Work</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Child Support/Custody</fullName>
            </value>
            <value>
                <fullName>Civil Rights</fullName>
            </value>
            <value>
                <fullName>Class Action</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Collection Practice</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Compliance Advice</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Corporate Takeovers</fullName>
            </value>
            <value>
                <fullName>Distribution of Assets</fullName>
            </value>
            <value>
                <fullName>Document Preparation</fullName>
            </value>
            <value>
                <fullName>Drafting Will</fullName>
            </value>
            <value>
                <fullName>Employee Benefits</fullName>
            </value>
            <value>
                <fullName>Enforcement of Judgement</fullName>
            </value>
            <value>
                <fullName>Equitable Distribution</fullName>
            </value>
            <value>
                <fullName>Establishing Trust</fullName>
            </value>
            <value>
                <fullName>Estate Planning/Financial Advice</fullName>
            </value>
            <value>
                <fullName>Filing Estate or Inheritance Tax Returns</fullName>
            </value>
            <value>
                <fullName>Filing of Documents</fullName>
            </value>
            <value>
                <fullName>Financial Advice</fullName>
            </value>
            <value>
                <fullName>Foreclosures</fullName>
            </value>
            <value>
                <fullName>Forming Partnership/Joint Venture</fullName>
            </value>
            <value>
                <fullName>General Advice to Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>