force-app/main/default/objects/Policy_Claim__c/fields/Aggregate_Limit__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit__c</fullName>
    <label>Aggregate Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>