force-app/main/default/objects/Policy_Claim__c/fields/Allegation__c.field-meta.xml
<CustomField>
    <fullName>Allegation__c</fullName>
    <label>Allegation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Conflict of Interest</fullName>
            </value>
            <value>
                <fullName>Conspiracy</fullName>
            </value>
            <value>
                <fullName>Declining Employment Improperly</fullName>
            </value>
            <value>
                <fullName>Error in Mathematical Calculation</fullName>
            </value>
            <value>
                <fullName>Error in Public Record Search</fullName>
            </value>
            <value>
                <fullName>Error in Service of Process/Give Notice</fullName>
            </value>
            <value>
                <fullName>Failure to Calendar Properly</fullName>
            </value>
            <value>
                <fullName>Failure to Follow Instructions or Obtain Client&apos;s Consent</fullName>
            </value>
            <value>
                <fullName>Failure to Know Where to File a Document/Venue</fullName>
            </value>
            <value>
                <fullName>Failure to Know or Ascertain a Deadline</fullName>
            </value>
            <value>
                <fullName>Failure to Know that a Document Should be Filed</fullName>
            </value>
            <value>
                <fullName>Failure to Know, Ascertain or Properly Apply Law</fullName>
            </value>
            <value>
                <fullName>Failure to Name the Proper Defendant</fullName>
            </value>
            <value>
                <fullName>Failure to Provide Client with Sufficient Information</fullName>
            </value>
            <value>
                <fullName>Failure to React to Calendar</fullName>
            </value>
            <value>
                <fullName>Fraud/Misrepresentation</fullName>
            </value>
            <value>
                <fullName>Improper Withdrawal from Representation</fullName>
            </value>
            <value>
                <fullName>Inadequate Discovery or Investigation</fullName>
            </value>
            <value>
                <fullName>Inadvertent Failure to File a Document</fullName>
            </value>
            <value>
                <fullName>Inadvertent Failure to follow Client Instructions</fullName>
            </value>
            <value>
                <fullName>Inadvertent Filing of Document in Wrong Place</fullName>
            </value>
            <value>
                <fullName>Intentional Breach of Fiduciary Duty</fullName>
            </value>
            <value>
                <fullName>Judgmental Error</fullName>
            </value>
            <value>
                <fullName>Libel, Slander, Defamation of Character</fullName>
            </value>
            <value>
                <fullName>Lost file, Document or Evidence</fullName>
            </value>
            <value>
                <fullName>Malicious Prosecution or Abuse of Process</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Procrastination/Failure to Follow-up</fullName>
            </value>
            <value>
                <fullName>Proofreading or other Clerical Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>