force-app/main/default/objects/Policy_Claim__c/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <label>Allocated</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>