force-app/main/default/objects/Policy_Claim__c/fields/AOP_Factor__c.field-meta.xml
<CustomField>
    <fullName>AOP_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area of Law</label>
    <referenceTo>AOP_Factor__c</referenceTo>
    <relationshipName>Policy_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>