force-app/main/default/objects/Policy_Claim__c/fields/AOP_Legacy__c.field-meta.xml
<CustomField>
    <fullName>AOP_Legacy__c</fullName>
    <label>AOP Legacy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>