force-app/main/default/objects/Policy_Claim__c/fields/Bypass_County_Default_Factor__c.field-meta.xml
<CustomField>
    <fullName>Bypass_County_Default_Factor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass County Default Factor</label>
    <type>Checkbox</type>
</CustomField>