force-app/main/default/objects/Policy_Claim__c/fields/Ceded_Cutoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ceded_Cutoff_Amount__c</fullName>
    <formula>Policy__r.Treaty_Version__r.Reinsurance_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ceded Cutoff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>