force-app/main/default/objects/Policy_Claim__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim</label>
    <type>Checkbox</type>
</CustomField>