force-app/main/default/objects/Policy_Claim__c/fields/Claim_Close_Payment_Resolutions__c.field-meta.xml
<CustomField>
    <fullName>Claim_Close_Payment_Resolutions__c</fullName>
    <label>Claim Close Payment Resolutions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed with no payment:  coverage denied</fullName>
            </value>
            <value>
                <fullName>Closed with no payment: no tender</fullName>
            </value>
            <value>
                <fullName>Closed with no payment:  only potential; claim never advanced</fullName>
            </value>
            <value>
                <fullName>Closed with lae payment only</fullName>
            </value>
            <value>
                <fullName>Closed with indemnity payment only</fullName>
            </value>
            <value>
                <fullName>Closed with both lae and indemnity payment</fullName>
            </value>
            <value>
                <fullName>Close with ULAE payment –disciplinary</fullName>
            </value>
            <value>
                <fullName>Closed with no payment: coverage denied</fullName>
                <isActive>false</isActive>
                <label>Closed with no payment: coverage denied</label>
            </value>
            <value>
                <fullName>Closed with no payment: only potential; claim never advanced</fullName>
                <isActive>false</isActive>
                <label>Closed with no payment: only potential; claim never advanced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>