force-app/main/default/objects/Policy_Claim__c/fields/Claim_Close_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Claim_Close_Reasons__c</fullName>
    <label>Claim Close Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim not advanced or unlikely to be</fullName>
            </value>
            <value>
                <fullName>No coverage</fullName>
            </value>
            <value>
                <fullName>No tender</fullName>
            </value>
            <value>
                <fullName>Successfully tendered to another carrier</fullName>
            </value>
            <value>
                <fullName>Suit voluntarily dismissed by plaintiff</fullName>
            </value>
            <value>
                <fullName>Suit dismissed on our motion</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Defense verdict at trial or arbitration</fullName>
            </value>
            <value>
                <fullName>Plaintiff verdict at trial or arbitration</fullName>
            </value>
            <value>
                <fullName>ARDC: investigation closed or limits reached</fullName>
            </value>
            <value>
                <fullName>ISBAM - IMPORT</fullName>
            </value>
            <value>
                <fullName>ISBAM - Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>