force-app/main/default/objects/Policy_Claim__c/fields/Claim_Closed__c.field-meta.xml
<CustomField>
    <fullName>Claim_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It close via Reserve-Close</description>
    <label>Is Claim Closed for Reserve</label>
    <type>Checkbox</type>
</CustomField>