force-app/main/default/objects/Policy_Claim__c/fields/Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Date__c</fullName>
    <label>Claim Date</label>
    <type>Date</type>
</CustomField>