force-app/main/default/objects/Policy_Claim__c/fields/Claim_Date_Show__c.field-meta.xml
<CustomField>
    <fullName>Claim_Date_Show__c</fullName>
    <formula>Claim_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Date Show</label>
    <type>Date</type>
</CustomField>