force-app/main/default/objects/Policy_Claim__c/fields/Claim_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Claim_Firm_Name__c</fullName>
    <label>Claim Firm Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>