force-app/main/default/objects/Policy_Claim__c/fields/Claim_Handler__c.field-meta.xml
<CustomField>
    <fullName>Claim_Handler__c</fullName>
    <label>Claim Handler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bernardini, Viviana</fullName>
            </value>
            <value>
                <fullName>candice.goldstein</fullName>
            </value>
            <value>
                <fullName>Cap, Marcy</fullName>
            </value>
            <value>
                <fullName>cinda.berry</fullName>
            </value>
            <value>
                <fullName>Craig, Tori</fullName>
            </value>
            <value>
                <fullName>Fox, Amy</fullName>
            </value>
            <value>
                <fullName>Hendrickson, J.</fullName>
            </value>
            <value>
                <fullName>Jaskula, Anne</fullName>
            </value>
            <value>
                <fullName>jordan.zelman</fullName>
            </value>
            <value>
                <fullName>Kreide, Cyndi</fullName>
            </value>
            <value>
                <fullName>Kroeger, Karrieann</fullName>
            </value>
            <value>
                <fullName>Krulac, Sherm</fullName>
            </value>
            <value>
                <fullName>Kruse, Corinne</fullName>
            </value>
            <value>
                <fullName>lisa.garbaty</fullName>
            </value>
            <value>
                <fullName>melissa.kaplan</fullName>
            </value>
            <value>
                <fullName>mosea.harris</fullName>
            </value>
            <value>
                <fullName>Neil.Bergeron</fullName>
            </value>
            <value>
                <fullName>Roble, Mike</fullName>
            </value>
            <value>
                <fullName>Shores, Joe</fullName>
            </value>
            <value>
                <fullName>Speulda, Sue</fullName>
            </value>
            <value>
                <fullName>Stevenson, Ian</fullName>
            </value>
            <value>
                <fullName>Thar, Anne</fullName>
            </value>
            <value>
                <fullName>Tony Abellera</fullName>
            </value>
            <value>
                <fullName>Walker, Carla</fullName>
            </value>
            <value>
                <fullName>Witten, Wendy</fullName>
            </value>
            <value>
                <fullName>Wyatt-Vit, K.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>