force-app/main/default/objects/Policy_Claim__c/fields/Claim_Handler_Email__c.field-meta.xml
<CustomField>
    <fullName>Claim_Handler_Email__c</fullName>
    <formula>Claim_Handler_Lookup__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Handler Email</label>
    <type>Text</type>
</CustomField>