force-app/main/default/objects/Policy_Claim__c/fields/Claim_Handler_Formula__c.field-meta.xml
<CustomField>
    <fullName>Claim_Handler_Formula__c</fullName>
    <formula>$User.Id == Claim_Handler_Lookup__c</formula>
    <label>Claim Handler (Self)</label>
    <type>Checkbox</type>
</CustomField>