force-app/main/default/objects/Policy_Claim__c/fields/Claim_Handler_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Claim_Handler_Legacy__c</fullName>
    <label>Claim Handler Legacy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>