force-app/main/default/objects/Policy_Claim__c/fields/Claim_Handler_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Claim_Handler_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Handler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>