force-app/main/default/objects/Policy_Claim__c/fields/Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_Id__c</fullName>
    <externalId>true</externalId>
    <label>Claim Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>