force-app/main/default/objects/Policy_Claim__c/fields/Claimant__c.field-meta.xml
<CustomField>
    <fullName>Claimant__c</fullName>
    <label>Claimant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>