force-app/main/default/objects/Policy_Claim__c/fields/ClaimCloseDAte__c.field-meta.xml
<CustomField>
    <fullName>ClaimCloseDAte__c</fullName>
    <label>Claim Close Date</label>
    <type>Date</type>
</CustomField>