force-app/main/default/objects/Policy_Claim__c/fields/ClaimId__c.field-meta.xml
<CustomField>
    <fullName>ClaimId__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id ,  Claim_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Id</label>
    <type>Text</type>
</CustomField>