force-app/main/default/objects/Policy_Claim__c/fields/ClaimLawyerName__c.field-meta.xml
<CustomField>
    <fullName>ClaimLawyerName__c</fullName>
    <label>ClaimLawyerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>