force-app/main/default/objects/Policy_Claim__c/fields/ClaimRepair__c.field-meta.xml
<CustomField>
    <fullName>ClaimRepair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ClaimRepair</label>
    <type>Checkbox</type>
</CustomField>