force-app/main/default/objects/Policy_Claim__c/fields/Claims_Repair__c.field-meta.xml
<CustomField>
    <fullName>Claims_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claims Repair</label>
    <type>Checkbox</type>
</CustomField>