force-app/main/default/objects/Policy_Claim__c/fields/ClaimShow__c.field-meta.xml
<CustomField>
    <fullName>ClaimShow__c</fullName>
    <formula>Claim__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim</label>
    <type>Checkbox</type>
</CustomField>