force-app/main/default/objects/Policy_Claim__c/fields/ClaimType__c.field-meta.xml
<CustomField>
    <fullName>ClaimType__c</fullName>
    <label>ClaimType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>