force-app/main/default/objects/Policy_Claim__c/fields/Correspondence_Box_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Box_Folder_Id__c</fullName>
    <label>Correspondence Box Folder Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>