force-app/main/default/objects/Policy_Claim__c/fields/Coverage_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Date__c</fullName>
    <label>Coverage Date</label>
    <type>Date</type>
</CustomField>