force-app/main/default/objects/Policy_Claim__c/fields/Dec_Judgment__c.field-meta.xml
<CustomField>
    <fullName>Dec_Judgment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dec. Judgment</label>
    <type>Checkbox</type>
</CustomField>