force-app/main/default/objects/Policy_Claim__c/fields/Deductible_Applied__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Applied__c</fullName>
    <formula>Deductible_Applied_LAE__c +
 Deductible_Applied_Loss__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deductible Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>