force-app/main/default/objects/Policy_Claim__c/fields/Deductible_Applied_Loss__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Applied_Loss__c</fullName>
    <label>Deductible Loss Applied</label>
    <summarizedField>Policy_Claim_Detail__c.Loss_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Deductible</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.Type__c</field>
        <operation>equals</operation>
        <value>Deductible Loss</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Claim_Detail__c.Policy_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>