force-app/main/default/objects/Policy_Claim__c/fields/Deductible_LAE_Applied_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deductible_LAE_Applied_Balance__c</fullName>
    <formula>Deductible_LAE_Applied_Limit__c -
abs( GL_5030__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Dollar Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>