force-app/main/default/objects/Policy_Claim__c/fields/Deductible_LAE_Applied_Limit__c.field-meta.xml
<CustomField>
    <fullName>Deductible_LAE_Applied_Limit__c</fullName>
    <label>Deductible LAE Applied Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>