force-app/main/default/objects/Policy_Claim__c/fields/Deductible_LAE_Applied_Limit_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Deductible_LAE_Applied_Limit_Consumed__c</fullName>
    <label>Deductible LAE Applied Limit Consumed</label>
    <summarizedField>Policy_Claim_Detail__c.LAE_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Deductible</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.Type__c</field>
        <operation>equals</operation>
        <value>Deductible Expense New</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Claim_Detail__c.Policy_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>