force-app/main/default/objects/Policy_Claim__c/fields/Deductible_LAE_Applied_Limit_Formula__c.field-meta.xml
<CustomField>
    <fullName>Deductible_LAE_Applied_Limit_Formula__c</fullName>
    <formula>Deductible_LAE_Applied_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Dollar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>