force-app/main/default/objects/Policy_Claim__c/fields/Deductible_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Remaining__c</fullName>
    <formula>Per_Claim_Deductible__c - Deductible_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deductible Allocated Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>