force-app/main/default/objects/Policy_Claim__c/fields/Deductible_Write_Off__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Write_Off__c</fullName>
    <label>Deductible Write Off</label>
    <summarizedField>Policy_Claim_Detail__c.Write_Off_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Deductible</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Claim_Detail__c.Policy_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>