force-app/main/default/objects/Policy_Claim__c/fields/DefenseFirmName__c.field-meta.xml
<CustomField>
    <fullName>DefenseFirmName__c</fullName>
    <label>DefenseFirmName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>