force-app/main/default/objects/Policy_Claim__c/fields/DefenseLawyerName__c.field-meta.xml
<CustomField>
    <fullName>DefenseLawyerName__c</fullName>
    <label>DefenseLawyerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>