force-app/main/default/objects/Policy_Claim__c/fields/Delete_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Delete_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delete Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>