force-app/main/default/objects/Policy_Claim__c/fields/Demand_in_Excess_of_the_Limit__c.field-meta.xml
<CustomField>
    <fullName>Demand_in_Excess_of_the_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demand in Excess of the Limit</label>
    <type>Checkbox</type>
</CustomField>