force-app/main/default/objects/Policy_Claim__c/fields/Discipline_Action__c.field-meta.xml
<CustomField>
    <fullName>Discipline_Action__c</fullName>
    <inlineHelpText>None = Memo / Discipline action is not decided so far In case of ARDC Complaint. 
No = ISBA will contribute in case of ARDC Complaint.
Yes = Lawyer will contribute in case of ARDC Complaint.</inlineHelpText>
    <label>Discipline Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No action</fullName>
            </value>
            <value>
                <fullName>Sanctioned</fullName>
            </value>
            <value>
                <fullName>Reprimanded</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Disbarred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>