force-app/main/default/objects/Policy_Claim__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Suit</fullName>
            </value>
            <value>
                <fullName>ARDC Complaint</fullName>
            </value>
            <value>
                <fullName>Memo</fullName>
            </value>
            <value>
                <fullName>Supoena</fullName>
                <label>Subpoena</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>