force-app/main/default/objects/Policy_Claim__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <formula>BLANKVALUE(Claim_Firm_Name__c, Policy__r.Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Name</label>
    <type>Text</type>
</CustomField>