force-app/main/default/objects/Policy_Claim__c/fields/First_Deductible_LAE_on_Policy__c.field-meta.xml
<CustomField>
    <fullName>First_Deductible_LAE_on_Policy__c</fullName>
    <label>First Deductible LAE on Policy</label>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Deductible</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Policy_Claim_Detail__c.Type__c</field>
        <operation>equals</operation>
        <value>Deductible Expense</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Claim_Detail__c.Policy_Claim__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>