force-app/main/default/objects/Policy_Claim__c/fields/Full_Prior_Acts__c.field-meta.xml
<CustomField>
    <fullName>Full_Prior_Acts__c</fullName>
    <formula>Policy__r.Full_Prior_Acts__c</formula>
    <label>Full Prior Acts</label>
    <type>Checkbox</type>
</CustomField>