force-app/main/default/objects/Policy_Claim__c/fields/GEO_Factor__c.field-meta.xml
<CustomField>
    <fullName>GEO_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GEO_Factor__c.Master_Factor__r.Default__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GEO_Factor__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Policy_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>