force-app/main/default/objects/Policy_Claim__c/fields/GL_2100__c.field-meta.xml
<CustomField>
    <fullName>GL_2100__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GL 2100</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>