force-app/main/default/objects/Policy_Claim__c/fields/GL_2140__c.field-meta.xml
<CustomField>
    <fullName>GL_2140__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GL 2140</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>