force-app/main/default/objects/Policy_Claim__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incident</label>
    <type>Checkbox</type>
</CustomField>