force-app/main/default/objects/Policy_Claim__c/fields/Incident_Date_Show__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date_Show__c</fullName>
    <formula>Incident_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Date Show</label>
    <type>Date</type>
</CustomField>