force-app/main/default/objects/Policy_Claim__c/fields/Incidentshow__c.field-meta.xml
<CustomField>
    <fullName>Incidentshow__c</fullName>
    <formula>Incident__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident</label>
    <type>Checkbox</type>
</CustomField>